@@ -1,7 +1,7 @@
 Package: openxlsx
 Type: Package
 Title: Read, Write and Edit XLSX Files
-Version: 3.0.3
+Version: 3.0.4
 Date: 2015-07-03
 Authors@R: c(
     person("Alexander", "Walker",
